[gd_scene load_steps=24 format=2]

[ext_resource path="res://mapNodes/Node_00_Tutorial/Node00_Tutorial_Start.gd" type="Script" id=1]
[ext_resource path="res://assets/art/Buildings/PLACEHOLDER_PlayerHome.png" type="Texture" id=2]
[ext_resource path="res://mapNodes/Node_00_Tutorial/PlayerHome.gd" type="Script" id=3]
[ext_resource path="res://assets/art/GUI/ButtonPrompts/TalkPrompt.png" type="Texture" id=4]
[ext_resource path="res://entities/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/art/MapNodes/Node_00_Tutorial/PLACEHOLDER_TutorialBackground_Clouds.png" type="Texture" id=6]
[ext_resource path="res://assets/art/MapNodes/Node_00_Tutorial/PLACEHOLDER_TutorialBackground_Trees.png" type="Texture" id=7]
[ext_resource path="res://assets/art/MapNodes/Node_00_Tutorial/PLACEHOLDER_TutorialBackground_Grass.png" type="Texture" id=8]
[ext_resource path="res://assets/art/GUI/ButtonPrompts/MovementPrompt.png" type="Texture" id=9]
[ext_resource path="res://assets/art/Characters/Knight/PLACEHOLDER_Knight_Idle00.png" type="Texture" id=10]
[ext_resource path="res://assets/art/Characters/Knight/PLACEHOLDER_Knight_Idle01.png" type="Texture" id=11]
[ext_resource path="res://assets/art/Characters/Knight/PLACEHOLDER_Knight_Idle02.png" type="Texture" id=12]
[ext_resource path="res://assets/art/Characters/Knight/PLACEHOLDER_Knight_Idle03.png" type="Texture" id=13]
[ext_resource path="res://mapNodes/Node_00_Tutorial/KnightSprite.gd" type="Script" id=14]

[sub_resource type="CapsuleShape2D" id=1]
radius = 60.0
height = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10000, 40 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 130 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10030, 40 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 40, 580 )

[sub_resource type="Animation" id=6]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/Clouds:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background/Trees:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Background/Grass:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 222.036

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=9]
radius = 160.312

[node name="Node00_Tutorial_Start" type="Node2D" groups=[
"level_root",
]]
script = ExtResource( 1 )

[node name="PlayerHome" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 3960, 800 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="EnterHouseArea" type="Area2D" parent="PlayerHome"]
editor/display_folded = true
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHome/EnterHouseArea"]
position = Vector2( -70, 150 )
shape = SubResource( 1 )

[node name="TalkPrompt" type="Sprite" parent="PlayerHome/EnterHouseArea"]
visible = false
position = Vector2( -70, -10 )
texture = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 5 )]
editor/display_folded = true
visible = false
position = Vector2( 270, 930 )

[node name="Camera2D2" type="Camera2D" parent="Player"]
current = true
limit_left = 0
limit_top = 0
limit_right = 20000
limit_bottom = 1080
limit_smoothed = true
smoothing_enabled = true
editor_draw_limits = true
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="ParallaxBackground" parent="."]
editor/display_folded = true

[node name="Clouds" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 1920, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="CloudsSprite" type="Sprite" parent="Background/Clouds"]
position = Vector2( 960, 540 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 1920, 1080 )
__meta__ = {
"_edit_lock_": true
}

[node name="Trees" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 1920, 0 )

[node name="TreesSprite" type="Sprite" parent="Background/Trees"]
position = Vector2( 960, 540 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, 0, 1920, 1080 )
__meta__ = {
"_edit_lock_": true
}

[node name="Grass" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2( 1920, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="GrassSprite" type="Sprite" parent="Background/Grass"]
position = Vector2( 960, 540 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 0, 0, 1920, 1080 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerStartPosition" type="Position2D" parent="."]
visible = false
position = Vector2( 140, 910 )
__meta__ = {
"_edit_lock_": true
}

[node name="BottomMapLimit" type="StaticBody2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 930, 570 )
collision_layer = 8
collision_mask = 7
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomMapLimit"]
position = Vector2( 9070, 470 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="LeftMapLimit" type="StaticBody2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 930, 570 )
collision_layer = 8
collision_mask = 7
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftMapLimit"]
position = Vector2( -950, 380 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="TopMapLimit" type="StaticBody2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 920, 760 )
collision_layer = 8
collision_mask = 7
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopMapLimit"]
position = Vector2( 9090, 100 )
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="RightMapLimit" type="StaticBody2D" parent="."]
editor/display_folded = true
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightMapLimit"]
position = Vector2( 20040, 510 )
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Fade In" = SubResource( 6 )

[node name="MovementPromptArea" type="Area2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 270, 820 )
collision_layer = 16

[node name="MovementPrompt" type="Sprite" parent="MovementPromptArea"]
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovementPromptArea"]
shape = SubResource( 7 )

[node name="TalkPromptArea" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 2850, 830 )
collision_layer = 32

[node name="KnightSprite" type="AnimatedSprite" parent="TalkPromptArea"]
position = Vector2( -710, 50 )
scale = Vector2( -0.15, 0.15 )
frames = SubResource( 8 )
frame = 2
playing = true
script = ExtResource( 14 )
interaction_script = "res://mapNodes/Node_00_Tutorial/TutorialKnightDialogue.json"

[node name="TalkPrompt" type="CollisionShape2D" parent="TalkPromptArea"]
position = Vector2( -710, 30 )
shape = SubResource( 9 )

[node name="TalkPromptSprite" type="Sprite" parent="TalkPromptArea"]
position = Vector2( -710, -80 )
texture = ExtResource( 4 )
[connection signal="interaction_ended" from="PlayerHome" to="Player" method="_on_interaction_ended"]
[connection signal="body_entered" from="PlayerHome/EnterHouseArea" to="." method="_on_EnterHouseArea_body_entered"]
[connection signal="body_exited" from="PlayerHome/EnterHouseArea" to="." method="_on_EnterHouseArea_body_exited"]
[connection signal="body_entered" from="MovementPromptArea" to="." method="_on_MovementPromptArea_body_entered"]
[connection signal="body_exited" from="MovementPromptArea" to="." method="_on_MovementPromptArea_body_exited"]
[connection signal="body_entered" from="TalkPromptArea" to="." method="_on_TalkPromptArea_body_entered"]
[connection signal="body_exited" from="TalkPromptArea" to="." method="_on_TalkPromptArea_body_exited"]
